Test_files/invalidTestCases/fail_assert.avm
push int32(32)
assert int8(10)
exit